--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 
     <section id="live-data-section">
         <h2>Live Data</h2>
-        <p>Status: <span id="live-status">Connecting...</span></p>
+        <p>Status: <span id="live-status">Initializing...</span></p>
         <div>
-            Temperature: <span id="live-temp">--</span> &deg;C 
+            Fridge: <span id="live-fridge">--</span> &deg;F
         </div>
         <div>
-            Humidity: <span id="live-humidity">--</span> %
+            Freezer: <span id="live-freezer">--</span> &deg;F
+        </div>
+        <div>
+            Garage: <span id="live-garage">--</span> &deg;F
         </div>
         <p><small>Last updated: <span id="last-updated">Never</span></small></p>
     </section>
