--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         </div>
          <p><small>Last updated: <span id="sump-monitor-last-updated">Never</span></small></p>
         </section>
+    <section>
+    <h2>Sump Pump Graphs</h2>
+        <div class="chart-container"><canvas id="sumpTempChart"></canvas></div>
+        <div class="chart-container"><canvas id="sumpPowerChart"></canvas></div>
+        <div class="chart-container"><canvas id="sumpRuntimeChart"></canvas></div>
+        <div class="chart-container"><canvas id="sumpSinceRunChart"></canvas></div>
+    </section>
 
     <section id="historical-data-section">
         <h2>Long-Term Historical Data (Google Sheets)</h2>
