--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div>Fridge: <span id="live-fridge">--</span> &deg;F</div>
             <div>Freezer: <span id="live-freezer">--</span> &deg;F</div>
             <div>Garage: <span id="live-garage">--</span> &deg;F</div>
+            <div>Heater Setting: <span id="live-heater-value">--</span></div>
+            <div>Heater Status: <span id="live-heater-status">--</span></div>
         </div>
          <p><small>Last updated: <span id="temp-monitor-last-updated">Never</span></small></p>
         <h3>Recent History (Fridge/Freezer Monitor)</h3>
