--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <section id="historical-data-section">
         <div id="historical-chart-container-gsheets">
-            Google Sheets Chart will load here...
+            Historical data loading...
         </div>
     </section>
 
