--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
     <div id="weather-display-container">
-    <div id="weather-location">Watertown, SD</div>
     <div id="current-weather">
         <div id="current-temp">--°F</div>
         <div id="current-details">
@@ -35,7 +34,8 @@
                 <option value="4" selected>Last 4 Hours</option>
                 <option value="12">Last 12 Hours</option>
                 <option value="24">Last 24 Hours</option>                
-                <option value="24">Last 48 Hours</option>
+                <option value="48">Last 48 Hours</option>
+                <option value="168">Last 1 Week</option>
             </select>
     </section>
     <section id="temp-monitor-section">
