--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="current-temp">--°F</div>
         <div id="current-details">
             <div id="current-condition">--</div>
-            <div id="high-low">H: --° / L: --°</div>
+            <div id="high-low">H: <span class="temp-high">--</span>° / L: <span class="temp-low">--</span>°</div>
             <div id="wind-speed">Wind: -- mph</div>
         </div>
     </div>
