--- a/index.html
+++ b/index.html
@@ -76,10 +76,15 @@
         </section>
     <section>
     <h2>Sump Pump</h2>
+        <h3>Daily Run Count (Last 90 Days)</h3>
+            <div class="chart-container chart-container-large">
+                <canvas id="sumpRunsPerDayChart"></canvas>
+            </div>
+        </section>
+        <div class="chart-container"><canvas id="sumpSinceRunChart"></canvas></div>
+        <div class="chart-container"><canvas id="sumpRuntimeChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpTempChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpPowerChart"></canvas></div>
-        <div class="chart-container"><canvas id="sumpRuntimeChart"></canvas></div>
-        <div class="chart-container"><canvas id="sumpSinceRunChart"></canvas></div>
     </section>
     
     <script src="config.js"></script>
