--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
         <h2>Fridge/Freezer Monitor (<span id="temp-monitor-status">Initializing...</span>)</h2>
          <div class="live-values">
             <div>Fridge: <span id="live-fridge">--</span> &deg;F</div>
-             <div id="fridge-stats">24h High: -- | Low: --</div>
             <div>Freezer: <span id="live-freezer">--</span> &deg;F</div>
-             <div id="freezer-stats">24h High: -- | Low: --</div>
             <div>Garage: <span id="live-garage">--</span> &deg;F</div>
-             <div id="garage-stats">24h High: -- | Low: --</div>
+
+             <div id="fridge-stats">H: -- | L: --</div>
+             <div id="freezer-stats">H: -- | L: --</div>
+             <div id="garage-stats">H: -- | L: --</div>
+             
             <div>Heater Run Time: <span id="live-heater-value">--</span></div>
             <div>Heater Status: <span id="live-heater-status">--</span></div>
         </div>
