--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
        <div class="live-values">
     <div class="temp-card">
         <div class="temp-card-label">Fridge</div>
-        <div class="temp-card-current"><span id="live-fridge">--</span>&deg;</div>
+        <div class="temp-card-current"><span id="live-fridge">--&deg;</span></div>
         <div class="temp-card-stats" id="fridge-stats">H: --&deg; / L: --&deg;</div>
     </div>
     <div class="temp-card">
         <div class="temp-card-label">Freezer</div>
-        <div class="temp-card-current"><span id="live-freezer">--</span>&deg;</div>
+        <div class="temp-card-current"><span id="live-freezer">--&deg;</span></div>
         <div class="temp-card-stats" id="freezer-stats">H: --&deg; / L: --&deg;</div>
     </div>
     <div class="temp-card">
         <div class="temp-card-label">Garage</div>
-        <div class="temp-card-current"><span id="live-garage">--</span>&deg;</div>
+        <div class="temp-card-current"><span id="live-garage">--&deg;</span></div>
         <div class="temp-card-stats" id="garage-stats">H: --&deg; / L: --&deg;</div>
     </div>
     <div class.temp-card">
