--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="temp-card-current"><span id="live-garage">--&deg;</span></div>
         <div class="temp-card-stats" id="garage-stats">H: --&deg; / L: --&deg;</div>
     </div>
-    <div class.temp-card">
+    <div class="temp-card">
         <div class="temp-card-label">Heater</div>
         <div class="temp-card-current" id="live-heater-status">--</div>
         <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
