--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
     </section>
     <section id="temp-monitor-section">
         <h2>Fridge/Freezer Monitor (<span id="temp-monitor-status">Initializing...</span>)</h2>
-       <div class="live-values">
-    <div class="temp-card">
-        <div class="temp-card-label">Fridge</div>
-        <div class="temp-card-current"><span id="live-fridge">--&deg;</span></div>
-        <div class="temp-card-stats" id="fridge-stats">H: --&deg; / L: --&deg;</div>
-    </div>
-    <div class="temp-card">
-        <div class="temp-card-label">Freezer</div>
-        <div class="temp-card-current"><span id="live-freezer">--&deg;</span></div>
-        <div class="temp-card-stats" id="freezer-stats">H: --&deg; / L: --&deg;</div>
-    </div>
-    <div class="temp-card">
-        <div class="temp-card-label">Garage</div>
-        <div class="temp-card-current"><span id="live-garage">--&deg;</span></div>
-        <div class="temp-card-stats" id="garage-stats">H: --&deg; / L: --&deg;</div>
-    </div>
-    <div class="temp-card">
-        <div class="temp-card-label">Heater</div>
-        <div class="temp-card-current" id="live-heater-status">--</div>
-        <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
-    </div>
-</div>
+        <div class="live-values">
+            <div class="temp-card">
+                <div class="temp-card-label">Fridge</div>
+                <div class="temp-card-current"><span id="live-fridge">--</span>&deg;F</div>
+                <div class="temp-card-stats" id="fridge-stats">H: --&deg; / L: --&deg;</div>
+            </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Freezer</div>
+                <div class="temp-card-current"><span id="live-freezer">--</span>&deg;F</div>
+                <div class="temp-card-stats" id="freezer-stats">H: --&deg; / L: --&deg;</div>
+            </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Garage</div>
+                <div class="temp-card-current"><span id="live-garage">--</span>&deg;F</div>
+                <div class="temp-card-stats" id="garage-stats">H: --&deg; / L: --&deg;</div>
+            </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Heater</div>
+                <div class="temp-card-current" id="live-heater-status">--</div>
+                <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
+            </div>
+        </div>
       
         <h3>History (Fridge/Freezer)</h3>
         <div class="chart-container">
