--- a/index.html
+++ b/index.html
@@ -85,14 +85,9 @@
             <div>Time Since Last Run: <span id="sump-since-run">--</span> min</div>
         </div>
          
-       
-    <section>
     <h2>Sump Pump</h2>
-        <h4>Daily Run Count (Last 90 Days)</h4>
-            <div class="chart-container chart-container-large">
-                <canvas id="sumpRunsPerDayChart"></canvas>
-            </div>
-        </section>
+        <h4><center>Daily Sump Pump Cycle Count (Last 90 Days)</center></h4>
+        <div class="chart-container chart-container-large"><canvas id="sumpRunsPerDayChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpSinceRunChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpRuntimeChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpTempChart"></canvas></div>
