--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
       
-        <h3>History (Fridge/Freezer)</h3>
+        <h3>Fridge/Freezer History</h3>
         <div class="chart-container">
             <canvas id="fridgeChart"></canvas>
         </div>
@@ -85,8 +85,7 @@
             <div>Time Since Last Run: <span id="sump-since-run">--</span> min</div>
         </div>
          
-    <h2>Sump Pump</h2>
-        <h4><center>Daily Sump Pump Cycle Count (Last 90 Days)</center></h4>
+    <h3>Sump Pump History</h3>
         <div class="chart-container chart-container-large"><canvas id="sumpRunsPerDayChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpSinceRunChart"></canvas></div>
         <div class="chart-container"><canvas id="sumpRuntimeChart"></canvas></div>
