--- a/index.html
+++ b/index.html
@@ -50,24 +50,22 @@
                 <div class="temp-card-current" id="live-heater-status">--</div>
                 <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
             </div>
+          </div>
+          <div class="history-container">
+          <h3>Fridge/Freezer History</h3>
+          <div>
+            <label for="history-range">Select History Range:</label>
+            <select id="history-range">
+              <option value="1">Last 1 Hour</option>
+              <option value="2">Last 2 Hours</option>
+              <option value="4" selected>Last 4 Hours</option>
+              <option value="12">Last 12 Hours</option>
+              <option value="24">Last 24 Hours</option>
+              <option value="48">Last 48 Hours</option>
+              <option value="168">Last 1 Week</option>
+            </select>
+          </div>
         </div>
-        <div>   
-        <left>
-            <h3>Fridge/Freezer History</h3>
-        </left>
-        <right>
-        <label for="history-range">Select History Range:</label>
-        <select id="history-range">
-            <option value="1">Last 1 Hour</option>
-            <option value="2">Last 2 Hours</option>
-            <option value="4" selected>Last 4 Hours</option>
-            <option value="12">Last 12 Hours</option>
-            <option value="24">Last 24 Hours</option>                
-            <option value="48">Last 48 Hours</option>
-            <option value="168">Last 1 Week</option>
-        </select>
-        </right>
-        </div>   
         <div class="chart-container">
             <canvas id="fridgeChart"></canvas>
         </div>
