--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
             </div>
           </div>
-          <div>
+          <div class="history-container">
           <h3>Fridge/Freezer History</h3>
           <div>
             <label for="history-range">Select History Range:</label>
