--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
     <section id="sump-monitor-section">
         <h2>Sump Pump Monitor (<span id="sump-monitor-status">Initializing...</span>)</h2>
          <div class="live-values">
+            <div class="temp-card">
+                <div class="temp-card-label">Basement Temp: </div>
+                <div class="temp-card-current"><span id="sump-temp">--</span>&deg;F</div>
+            </div>
             <div>Temperature: <span id="sump-temp">--</span> &deg;F</div>
             <div>Ext. Power: <span id="sump-power">--</span> V</div>
             <div>Last Run Time: <span id="sump-runtime">--</span> s</div>
