--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <div class="live-values">
             <div class="temp-card">
                 <div class="temp-card-label">Fridge</div>
-                <div class="temp-card-current"><span id="live-fridge">--</span>&deg;F</div>
+                <div class="temp-card-current"><span id="live-fridge">--</span>&deg;</div>
                 <div class="temp-card-stats" id="fridge-stats">H: --&deg; / L: --&deg;</div>
             </div>
             <div class="temp-card">
                 <div class="temp-card-label">Freezer</div>
-                <div class="temp-card-current"><span id="live-freezer">--</span>&deg;F</div>
+                <div class="temp-card-current"><span id="live-freezer">--</span>&deg;</div>
                 <div class="temp-card-stats" id="freezer-stats">H: --&deg; / L: --&deg;</div>
             </div>
             <div class="temp-card">
                 <div class="temp-card-label">Garage</div>
-                <div class="temp-card-current"><span id="live-garage">--</span>&deg;F</div>
+                <div class="temp-card-current"><span id="live-garage">--</span>&deg;</div>
                 <div class="temp-card-stats" id="garage-stats">H: --&deg; / L: --&deg;</div>
             </div>
             <div class="temp-card">
@@ -82,14 +82,27 @@
         <h2>Sump Pump Monitor (<span id="sump-monitor-status">Initializing...</span>)</h2>
          <div class="live-values">
             <div class="temp-card">
-                <div class="temp-card-label">Basement Temp: </div>
-                <div class="temp-card-current"><span id="sump-temp">--</span>&deg;F</div>
+                <div class="temp-card-label">Basement Temp</div>
+                <div class="temp-card-current"><span id="sump-temp">--</span>&deg;</div>
             </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Ext. Power</div>
+                <div class="temp-card-current"><span id="sump-power">--</span>VDC</div>
+            </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Last Run Time</div>
+                <div class="temp-card-current"><span id="sump-runtime">--</span> s</div>
+            </div>
+            <div class="temp-card">
+                <div class="temp-card-label">Time Since Last Cycle</div>
+                <div class="temp-card-current"><span id="sump-since-run">--</span> min</div>
+            </div>
+          </div>
             <div>Temperature: <span id="sump-temp">--</span> &deg;F</div>
             <div>Ext. Power: <span id="sump-power">--</span> V</div>
             <div>Last Run Time: <span id="sump-runtime">--</span> s</div>
             <div>Time Since Last Run: <span id="sump-since-run">--</span> min</div>
-        </div>
+
          
     <h3>Sump Pump History</h3>
         <div class="chart-container chart-container-large"><canvas id="sumpRunsPerDayChart"></canvas></div>
