--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="temp-card">
                 <div class="temp-card-label">Ext. Power</div>
-                <div class="temp-card-current"><span id="sump-power">--</span>VDC</div>
+                <div class="temp-card-current"><span id="sump-power">--</span> v</div>
             </div>
             <div class="temp-card">
                 <div class="temp-card-label">Last Run Time</div>
@@ -98,11 +98,6 @@
                 <div class="temp-card-current"><span id="sump-since-run">--</span> min</div>
             </div>
           </div>
-            <div>Temperature: <span id="sump-temp">--</span> &deg;F</div>
-            <div>Ext. Power: <span id="sump-power">--</span> V</div>
-            <div>Last Run Time: <span id="sump-runtime">--</span> s</div>
-            <div>Time Since Last Run: <span id="sump-since-run">--</span> min</div>
-
          
     <h3>Sump Pump History</h3>
         <div class="chart-container chart-container-large"><canvas id="sumpRunsPerDayChart"></canvas></div>
