--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div id="current-condition">--</div>
             <div id="high-low">H: <span class="temp-high">--</span>° / L: <span class="temp-low">--</span>°</div>
             <div id="wind-speed">Wind: -- mph</div>
+            <div id="humidity">Humidity: --%</div>
+            <div id="feels-like">Feels like: --°</div>
+            <div id="tomorrow-forecast">Tomorrow: H: --° / L: --°</div>
         </div>
     </div>
     <div id="forecast-synopsis">
