--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="temp-card">
                 <div class="temp-card-label">Heater</div>
                 <div class="temp-card-current" id="live-heater-status">--</div>
-                <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span>s</div>
+                <div class="temp-card-stats">Run Time: <span id="live-heater-value">--</span></div>
             </div>
           </div>
           <div class="history-container">
