--- a/index.html
+++ b/index.html
@@ -113,5 +113,13 @@
      </section>
     <script src="config.js"></script>
     <script src="script.js"></script>
+    <section id="fridge-control">
+  <h2>Controls</h2>
+  <div style="text-align: center;">
+    <button id="fridge-toggle-button">Loading...</button>
+    <div id="fridge-toggle-status"></div>
+  </div>
+</section>
+
 </body>
 </html>
