--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
     <p><small>Last updated: <span id="sump-monitor-last-updated">Never</span></small></p>
     </section>
      </section>
-    <script src="config.js"></script>
-    <script src="script.js"></script>
+
     <section id="fridge-control">
   <h2>Controls</h2>
   <div style="text-align: center;">
@@ -121,5 +120,9 @@
   </div>
 </section>
 
+
+    <!-- PUT NOTHING AFTER THESE LINES -->
+    <script src="config.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
